--- a/aula-14/styles/styles.css
+++ b/aula-14/styles/styles.css
@@ -6,41 +6,47 @@
 }
 
 .discount-bar{
-    height: 2.7vh;
+    display: flex;
+    align-items: center;
+    height: 1.4rem;
     width: 100vw;
     background: #D1891C;
     color: #000000;
     font-size: 1rem;
-    font-weight: 400;
 }
 
+.discount-bar span{
+    margin: 0rem 0rem 0rem 1.1rem
+}
 .title-bar{
+    display: flex;
+    align-items: center;
     height: 5vh;
     width: 100vw;
     background: #00669f;
     color: #FFFFFF;
-    font-size: 1.4rem;
-    box-shadow: 0px 0.2rem 0.1rem 0px #00000040;
-
+    font-size: 1.6rem;
+    box-shadow: 0rem 0.5rem 0.38rem 0rem #00000040;
 }
 
+.title-bar span{
+    margin-left: 1.1rem;
+}
 
 
 .cards{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin-top: 1rem;
-    align-items: center;
+    margin: 2rem;
 }
 
 .card{
     display: flex;
     flex-direction: column;
     background: #F3F3F3;
-    width: 17.5rem;
+    width: 22.5rem;
     height: 35rem;
-    align-items: center;
     border-radius: 1.5rem 1.5rem 0rem 0rem;
     margin-bottom: 1rem;
 }
@@ -48,7 +54,7 @@
 .bg-batman{
     position: relative;
     background-image: url(/aula-14/img/849bfede3a5193c34ab8a00379e64fa2\ 1.png);
-    width: 17.5rem;
+    width: 22.5rem;
     height: 10rem;
     border-radius: 1.5rem 1.5rem 0rem 0 ;
 }
@@ -56,7 +62,7 @@
 .bg-mulher{
     position: relative;
     background-image: url(/aula-14/img/bg-mulher.png);
-    width: 17.5rem;
+    width: 22.5rem;
     height: 10rem;
     border-radius: 1.5rem 1.5rem 0rem 0 ;
 }
@@ -64,7 +70,7 @@
 .bg-super{
     position: relative;
     background-image: url(/aula-14/img/bg-super.png);
-    width: 17.5rem;
+    width: 22.5rem;
     height: 10rem;
     border-radius: 1.5rem 1.5rem 0rem 0 ;
 }
@@ -72,7 +78,7 @@
 .bg-arlequina{
     position: relative;
     background-image: url(/aula-14/img/bg-arlequina.png);
-    width: 17.5rem;
+    width: 22.5rem;
     height: 10rem;
     border-radius: 1.5rem 1.5rem 0rem 0 ;
 }
@@ -81,7 +87,7 @@
     width: 6.25rem;
     height: 6.25rem;
     top: 6.68rem;
-    left: 5.5rem;
+    left: 8.3rem;
     border-radius: 3rem;
 }
 
@@ -98,12 +104,12 @@
     flex-direction: column;
     align-items: center;
     margin: 5rem 0.5rem 2rem 0.5rem;
-    justify-content: space-around;
-    
+    padding: 10px;
+    text-align: center;
 }
 
 .card-txt h1{
-    margin-bottom: 0.4rem;
+    margin-bottom: 2.5rem;
 }
 
 .card button{
